--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,20 +1,26 @@
+.title{
+    color: black;
+    font-size: 2.5rem;
+    text-shadow: 5px 2px 10px rgba(0, 0, 0, .5);
+
+}
 .header-style {
-    padding: 15px 40px;
+    padding: .5rem 2rem;
     background-image: linear-gradient(rgb(112, 128, 144),rgb(192, 192, 192));
     border-bottom: 1px solid rgba(192, 192, 192, 0.5);;
     display: flex;
-    justify-content: right;
+    justify-content:space-between;
     flex-wrap: wrap;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
-    height: 3rem;
+    height: 100%;
     z-index: 9999;
 }
 
 .header-nav {
     text-indent: 15px;
-    font-size: 25px;
+    font-size: 2rem;
     text-shadow: 5px 2px 10px rgba(0, 0, 0, .75);
 }
 
@@ -24,11 +30,11 @@
     list-style: none;
 }
 
-.link-decoration {
+.header-nav a {
     text-decoration: none;
     color: black;
 }
 
-.link-decoration:hover{
+.header-nav a:hover{
     color: slategrey;
 }
