--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
 body {
+  height: 100%;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: silver;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+      font-family:Georgia, 'Times New Roman', Times, serif;
+
+}
+
+*{
+  font-family:Georgia, 'Times New Roman', Times, serif;
+
+}
+
+.wrapper {
+  height:100%;
 }
