--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+
+* {
+  box-sizing: border-box;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+
+}
+
+html,
+body {
+  min-height: 100%;
+}
+
 body {
   height: 100%;
   margin: 0;
@@ -16,10 +28,6 @@ code {
 
 }
 
-*{
-  font-family:Georgia, 'Times New Roman', Times, serif;
-
-}
 
 .wrapper {
   height:100%;
