--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+main {
+  margin: 0 auto;
+  max-width: 90%;
+  padding: 50px 30px;
+}
 
 * {
   box-sizing: border-box;
@@ -28,7 +33,78 @@ code {
 
 }
 
+h2{
+  font-size: 2.5rem;
+  text-decoration: underline;
+  justify-content: center;
+  display: flex;
+}
 
 .wrapper {
   height:100%;
+}
+ 
+img {
+  max-width: 100%;
+}
+
+.project {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  height: 300px;
+  margin: 30px;
+}
+
+.project-bg {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.project-text {
+  color: slategrey;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  padding: 50px;
+  z-index: 900;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+}
+
+.project-text:hover {
+  background-color: rgba(0,0,0, .8);
+  opacity: 1;
+  border: 10px solid slategrey;
+}
+/* 
+.project-text h3 {
+  font-size: 2.5rem;
+} */
+
+.project-text a {
+  text-decoration: none;
+  font-weight: bold;
+  color: grey;
+  transition: all 0.3s ease-in-out;
+}
+
+.project-text a:hover {
+  color: white;
+  text-shadow: 5px 2px 10px rgba(0, 0, 0, .75);
+  font-weight: bolder;
+}
+
+.gitIcon {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 2rem;
+}
+
+.gitIcon:hover {
+  width: 3rem;
+  height:3rem;
 }
