--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,13 +1,24 @@
-.title{
-    color: black;
-    font-size: 2.5rem;
-    text-shadow: 5px 2px 10px rgba(0, 0, 0, .5);
+@keyframes dHover {
+    0% { opacity: .9;}
+    10% { opacity: 0.8;}
+    20% { opacity: 0.6;}
+    30% { opacity: 0.4;}
+    40% { opacity: 0.2}
+    50% { opacity: 0;}
+    60% { opacity: 0.2;}
+    70% { opacity: 0.4;}
+    80% { opacity: 0.6;}
+    90% { opacity: 0.8;}
+    100% { opacity: .9;}
+}
 
+.title{
+    font-size: 2.5rem;
 }
 .header-style {
     padding: .5rem 2rem;
-    background-image: linear-gradient(rgb(112, 128, 144),rgb(192, 192, 192));
-    border-bottom: 1px solid rgba(192, 192, 192, 0.5);;
+    /* background-image: linear-gradient(rgb(112, 128, 144),rgb(192, 192, 192)); */
+    /* border-bottom: 1px solid rgba(192, 192, 192, 0.5);; */
     display: flex;
     justify-content:space-between;
     flex-wrap: wrap;
@@ -39,14 +50,41 @@
     color: slategrey;
 }
 
+.diamond-border {
+    width: 0;
+    height: 0;
+    border: 55px solid transparent;
+    border-bottom: 75px solid var(--diamond-border);
+    position: relative;
+    top:-50px;
+    overflow: visible;
+}
+
+
+.diamond-border:after { 
+    content: ''; 
+    position: absolute; 
+    left: -55px; top: 75px; 
+    width: 0;  
+    height: 0; 
+    border: 55px solid transparent; 
+    border-top: 75px solid var(--diamond-border); 
+}
+  
+
 .diamond {
     width: 0;
     height: 0;
     border: 50px solid transparent;
-    border-bottom: 70px solid slategrey;
-    position: relative;
-    top:-50px;
+    border-bottom: 70px solid var(--diamond-color);
+    position: absolute;
+    top:-32px;
+    right:37px;
+    z-index: 20;
+    display: flex;
+    opacity: .7;
 }
+
 
 .diamond:after { 
   content: ''; 
@@ -55,7 +93,19 @@
   width: 0;  
   height: 0; 
   border: 50px solid transparent; 
-  border-top: 70px solid slategrey; 
+  border-top: 70px solid var(--diamond-color); 
+  z-index:20;
+}
+
+.diamond:hover {
+    border-bottom:  70px solid white;
+    animation: dHover 3s infinite;
+}
+
+.diamond:hover:after{
+    border-top: 70px solid white;
+    animation: dHover 3s infinite;
+
 }
 
 .menu{
@@ -65,14 +115,17 @@
   pointer-events: none;
   transition: 1s;
   transform: translateY(-3rem);
+  transform: translateX(-3rem);
+
   display: grid;
 }
 
 .menu-open{
     opacity: 1;
-    transition: 1s;
+    transition: 5s;
     pointer-events: all;
     z-index: 20;
     transform: translateY(0);
+    transform: translateX(-3rem);
 
 }
