--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,19 +1,22 @@
+.flex{
+    display: flex;
+    justify-content: space-between;
+}
+
 .h2{
     font-size: 3rem;
     text-decoration: underline;
 }
+
 .About {
     padding: 2rem;
     font-size: 1.5rem;
+    width: 55%;
 }
 
 .home {
-    text-align: center;
-    flex-direction: column;
     background-size: cover;
     background-attachment: fixed;
-    justify-content: center;
-    flex-wrap: wrap;
     height: 100%;
 }
 
