--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -12,6 +12,14 @@
     100% { opacity: .9;}
 }
 
+@keyframes dBHover {
+    0% { opacity: .9;}
+    25% { opacity: .75}
+    50% { opacity: .6;}
+    75% { opacity: .75}
+    100% { opacity: .9;}
+}
+
 .title{
     font-size: 2.5rem;
 }
@@ -59,7 +67,7 @@
     position: relative;
     top:-50px;
     overflow: visible;
-    animation: dHover 3s infinite;
+    animation: dBHover 3s infinite;
 
 }
 
@@ -71,7 +79,7 @@
     height: 0; 
     border: 55px solid transparent; 
     border-top: 75px solid var(--diamond-border); 
-    animation: dHover 3s infinite;
+    animation: dBHover 3s infinite;
 
 }
   
@@ -103,11 +111,11 @@
 
 .diamond:hover {
     border-bottom:  70px solid white;
-    animation: dHover 2s infinite;
+    animation: dHover 5s infinite;
 }
 
 .diamond:hover:after{
     border-top: 70px solid white;
-    animation: dHover 2s infinite;
+    animation: dHover 5s infinite;
 }
 
