--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -24,6 +24,48 @@
     
 }
 
+.accordian{
+    display: flex;
+    width: 100%;
+    padding: 4% 2%;
+    box-sizing: border-box;
+    height: 100vh;
+  
+}
+
+.accordian-item{
+    flex: 1;
+    overflow: hidden;
+    transition: .5s;
+    margin: 0 2%;
+    box-shadow: 0 20px 30px rgba(0,0,0,.1);
+    line-height: 0;
+    flex-wrap: wrap;
+   
+}
+.accordian-item > img {
+    width: 200%;
+    height: calc(100% - 10vh);
+    object-fit: cover; 
+    transition: .5s;
+  }
+  
+  .accordian-item > span {
+    font-size: 3.8vh;
+    display: block;
+    text-align: center;
+    height: 10vh;
+    line-height: 2.6;
+  }
+  
+  
+
+.accordian-item:hover { flex: 1 1 50%; }
+.accordian-item:hover > img {
+  width: 100%;
+  height: 100%;
+}
+ 
 /* .card h1, .card h3 {
     color: white;
     text-shadow: 2px 2px 5px black;
