--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -1,54 +1,75 @@
 
-
-.flex{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-
-.card {
-    border: .5rem solid slategrey;
-    position: relative;
-    width: 100%;
-    padding: 5px;
-    opacity: 50%;
-    background-size: contain;
-    display: flex;
-    margin: 2rem;
-    justify-content: space-evenly;
-    width: 40%;
-    height: auto;
-    text-align: center;
-    
-}
-
 .accordian{
     display: flex;
     width: 100%;
     padding: 4% 2%;
     box-sizing: border-box;
-    height: 100vh;
-  
+    height: 100%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .accordian-item{
     flex: 1;
     overflow: hidden;
     transition: .5s;
-    margin: 0 2%;
-    box-shadow: 0 20px 30px rgba(0,0,0,.1);
-    line-height: 0;
     flex-wrap: wrap;
-   
+    position: relative;
+    width: 100%;
+    max-width: 20rem;
+    height: 15rem;
+    margin: 0 .5rem;
 }
 .accordian-item > img {
-    width: 200%;
-    height: calc(100% - 10vh);
+    width: 100%;
+    height: 50%;
     object-fit: cover; 
     transition: .5s;
   }
+  
+  .project-text {
+    color: slategrey;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    padding: 50px;
+    z-index: 900;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+  }
+  
+  .project-text:hover {
+    background-color: rgba(0,0,0, .9);
+    opacity: 1;
+    border: 10px solid slategrey;
+  }
+  .project-text a {
+    text-decoration: none;
+    font-weight: bold;
+    color: grey;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .project-text a:hover {
+    color: white;
+    text-shadow: 5px 2px 10px rgba(0, 0, 0, .75);
+    font-weight: bolder;
+  }
+  
+  .gitIcon {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 2rem;
+  }
+  
+  .gitIcon:hover {
+    width: 3rem;
+    height:3rem;
+  }
+
   
   .accordian-item > span {
     font-size: 3.8vh;
@@ -58,30 +79,14 @@
     line-height: 2.6;
   }
   
-  
 
-.accordian-item:hover { flex: 1 1 50%; }
+.accordian-item:hover { 
+    flex: 5 1 100%; 
+    max-width: 50rem;
+    height: 25rem;
+
+}
 .accordian-item:hover > img {
   width: 100%;
   height: 100%;
 }
- 
-/* .card h1, .card h3 {
-    color: white;
-    text-shadow: 2px 2px 5px black;
-}
-
-
-.card:hover {
-    opacity: 100%;
-}
-
-.card a{
-    text-decoration: none;
-    color: black;
-}
-
-.card a:hover {
-    font-weight: bolder;
-    box-shadow: 10px 2px 5px grey;
-} */
