--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,3 +1,13 @@
+.footer {
+    padding: .5rem 2rem;
+    display: flex;
+    position: absolute;
+    bottom: 0%;
+    width: 100%;
+    z-index: 100;
+    justify-content: center;
+}
+
 .contact {
     padding: .5rem 2rem;
     display:flex;
