--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -8,6 +8,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
+    
 }
 
 .accordian-item{
@@ -18,8 +19,9 @@
     position: relative;
     width: 100%;
     max-width: 20rem;
-    height: 15rem;
+    height: 10rem;
     margin: 0 .5rem;
+
 }
 .accordian-item > img {
     width: 100%;
@@ -44,7 +46,8 @@
   .project-text:hover {
     background-color: rgba(0,0,0, .9);
     opacity: 1;
-    border: 10px solid slategrey;
+    border: 3px solid var(--diamond-border);
+    border-radius: 1rem;
   }
   .project-text a {
     text-decoration: none;
@@ -89,4 +92,5 @@
 .accordian-item:hover > img {
   width: 100%;
   height: 100%;
+  border-radius: 1rem;
 }
