--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -1,4 +1,3 @@
-
 .accordian{
   display: flex;
   width: 100%;
@@ -19,7 +18,7 @@
   width: 100%;
   max-width: 20rem;
   height: 10rem;
-  margin: 0 .5rem;
+  margin: 0 .2rem;
 }
 
 .accordian-item > img {
@@ -36,19 +35,23 @@
   bottom: 0px;
   left: 0px;
   right: 0px;
-  padding: 2rem;
+  padding: 0 1rem;
   z-index: 900;
   opacity: 0;
   transition: 0.5s ;
+  margin: 0
 } 
 
 .project-text h1{ text-decoration: underline;}
 
-.tool-list {
-  width: 100%;
-  height: 5rem;
+.project-text .flex,.project-text h4, .tool-list {
+  margin: 0 0.25rem;
 }
 
+.tool-list {
+  width: 100%;
+  height:6rem;
+}
 
 .tool-list ul{
   width: 100%;
@@ -70,6 +73,7 @@
   display: flex;
   justify-content: space-evenly;
 }
+
 .project-text:hover {
   background-image: linear-gradient(rgba(16, 9, 25,.9), rgba(28, 17, 51,.9));
   opacity: 1;
@@ -91,20 +95,20 @@
 }
   
 .gitIcon {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 2rem;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 4rem;
 }
   
 .gitIcon:hover {
-  width: 3rem;
-  height:3rem;
+  width: 4.5rem;
+  height:4.5rem;
 }
 
 .accordian-item:hover { 
   flex: 5 1 100%; 
-  max-width: 50rem;
-  height: 25rem;
+  max-width: 75rem;
+  height: 40rem;
 }
 
 .accordian-item:hover > img {
