--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -2,7 +2,7 @@
     opacity: 0;
     pointer-events: none;
     transition: 1.5s;
-    transform: translate(300rem, -300rem);
+    transform: translate(300em, -300em);
     display: flex;
     height: 100%;
     z-index: 8000;
