mobile-responsive font

--- a/src/components/Resume/style.css
+++ b/src/components/Resume/style.css
@@ -16,6 +16,7 @@
 .resume-background{
   background-image: linear-gradient(rgba(16, 9, 25,.7), rgba(28, 17, 51,.7));
   border-radius:1rem;
+  padding: 0 .2rem;
 }
 
 .resume-background h3{
