--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -16,9 +16,9 @@
   flex-wrap: wrap;
   position: relative;
   width: 100%;
-  max-width: 20rem;
-  height: 10rem;
-  margin: 0 .2rem;
+  max-width: 7em;
+  height: 4em;
+  margin: 0 .1em;
 }
 
 .accordian-item > img {
@@ -35,7 +35,7 @@
   bottom: 0px;
   left: 0px;
   right: 0px;
-  padding: 0 1rem;
+  padding: 0 1em;
   z-index: 900;
   opacity: 0;
   transition: 0.5s ;
@@ -45,12 +45,12 @@
 .project-text h1{ text-decoration: underline;}
 
 .project-text .flex,.project-text h4, .tool-list {
-  margin: 0 0.25rem;
+  margin: 0 0.25em;
 }
 
 .tool-list {
   width: 100%;
-  height:6rem;
+  height:1.75em;
 }
 
 .tool-list ul{
@@ -63,7 +63,7 @@
 }
 
 .tool-list li {
-  padding: 5px;
+  padding: .2em;
 }
 
 .bottom {
@@ -95,20 +95,20 @@
 }
   
 .gitIcon {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 4rem;
+  width: 1em;
+  height: 1em;
+  border-radius: 1em;
 }
   
 .gitIcon:hover {
-  width: 4.5rem;
-  height:4.5rem;
+  width: 1.5em;
+  height:1.5em;
 }
 
 .accordian-item:hover { 
   flex: 5 1 100%; 
-  max-width: 75rem;
-  height: 40rem;
+  max-width: 20em;
+  height: 10em;
 }
 
 .accordian-item:hover > img {
