--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,37 @@ h2{
 img {
   max-width: 100%;
 }
+
+
+@media (max-width: 1300px) {
+
+  :root{
+  font-size: 60%;
+  }
+
+}
+
+@media (max-width: 1100px) {
+  :root{
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 900px) {
+  :root{
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 860px) {
+  
+  :root{
+    font-size:35%
+  }
+}
+
+@media (max-width: 390px) {
+  :root{
+    font-size:20%
+  }
+}
