--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ main {
   font-family: Century Gothic,  'Times New Roman', Times, serif;
   z-index: 5;
   font-size: 4rem;
+  padding: 0;
 }
 
 .transition-none{
@@ -88,21 +89,26 @@ img {
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 950px) {
   :root{
     font-size: 50%;
   }
 }
 
-@media (max-width: 860px) {
+@media (max-width: 870px) {
   
   :root{
-    font-size:35%
+    font-size:40%;
   }
 }
 
+@media (max-width: 740px) {
+  :root{
+    font-size:30%;
+  }
+}
 @media (max-width: 390px) {
   :root{
-    font-size:20%
+    font-size:20%;
   }
 }
