--- a/src/components/Clock/style.css
+++ b/src/components/Clock/style.css
@@ -18,17 +18,16 @@
 
 .clock {
   border-radius: 50%;
-  opacity: 0.2;
+  opacity: 0.15;
   background-size: 88%;
   height: 75rem;
   position: relative;
   width: 75rem;
   overflow: hidden;
-  padding: 
 }
 
 
-.hours-container, .minutes-container, .seconds-container{
+.hours-container, .minutes-container, .seconds-container, .center-container{
   position: absolute;
   top: 0;
   right: 0;
@@ -45,6 +44,8 @@
   transform-origin: 50% 100%;
   width: 1.25%;
   border: .01rem ridge rgba(209, 232, 226,0.75);
+  z-index: 10;
+
 }
 
 .minutes {
@@ -56,6 +57,7 @@
   transform-origin: 50% 100%;
   width: 1%;
   border: .01rem ridge rgba(209, 232, 226,0.75);
+  z-index: 9;
 
 }
 
@@ -69,6 +71,19 @@
   width: 0.5%;
   z-index: 8;
   border: .01rem ridge rgba(17, 100, 102,0.75);
+
+}
+
+.center {
+  background: #000;
+  height: 2%;
+  left: 48.5%;
+  position: absolute;
+  top: 49%;
+  width: 2%;
+  border-radius: 50%;
+  z-index: 10;
+  border: .01rem ridge rgba(17, 100, 102,1);
 
 }
 
